# cli-wizard

./: .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.yml
.github/workflows/: pr-validation.yaml  pr-validation.yml  release.yaml  sync-labels.yaml  test.yaml  test.yml
docs/: cli.rst  commands.rst  conf.py  configuration.rst  index.rst  installation.rst
docs/_templates/: layout.html
examples/: cli-wizard.yaml  config.yaml  openapi.json  server.py  splash.txt
examples/my-cli/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  tox.ini
examples/my-cli/.github/: labels.yaml
examples/my-cli/.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
examples/my-cli/src/my_cli/: __init__.py  cli.py  client.py  constants.py  logging.py  profile.py
examples/my-cli/src/my_cli/commands/: __init__.py  config.py
examples/my-cli/tests/my_cli/: cli_test.py
resources/brand/: demo.yaml
src/cli_wizard/: cli.py  constants.py
src/cli_wizard/commands/: bootstrap.py  config.py  generate.py
src/cli_wizard/config/: configuration.py  default_config.yaml  schema.py
src/cli_wizard/generator/: generator.py  models.py  parser.py
src/cli_wizard/templates/: .gitignore.j2  CHANGELOG.md.j2  DEVELOPMENT.md.j2  LICENSE.j2  MANIFEST.in.j2  Makefile.j2  README.md.j2  VERSION.j2  cli-wizard.yaml.j2  cli.py.j2  client.py.j2  command_group.py.j2  constants.py.j2  pre-commit-config.yaml.j2  pyproject.toml.j2  (+1 more)
tests/: cli_test.py
tests/cli_wizard/: constants_test.py
(+26 files in other folders)
