[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_cli"
dynamic = ["version"]
description = "A CLI application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Firstname Lastname", email = "firstname.lastname@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "click~=8.1",
    "Jinja2~=3.1",
    "pydantic~=2.10",
    "PyYAML~=6.0",
    "requests~=2.32",
]

[project.optional-dependencies]
dev = [
    "autoflake~=2.3",
    "black~=26.1",
    "build~=1.3",
    "flake8~=7.3",
    "mypy~=1.18",
    "pre-commit~=4.0",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "tox~=4.32",
    "types-PyYAML~=6.0",
    "types-requests~=2.32",
]

[project.scripts]
my-cli = "my_cli.cli:main"

[project.urls]
Homepage = "https://github.com/gmarciani/my-cli"
Repository = "https://github.com/gmarciani/my-cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_cli*"]

[tool.setuptools.package-data]
my_cli = ["resources/*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
omit = ["*/__init__.py"]
